<resources>
    <string name="app_name">维修登记插件</string>
    <string name="loading_data">加载中...</string>
    <string name="comfirm">提交</string>
    <string name="repair_register">维修登记</string>
    <string name="save">保存</string>
    <string name="reject_desc">驳回理由:</string>
    <string name="driver_info">司机信息</string>
    <string name="driver_name_new">司机姓名</string>
    <string name="please_enter_driver_name">请输入司机姓名</string>
    <string name="telphone">手机号</string>
    <string name="please_enter_phone_num">请输入11位手机号码</string>
    <string name="vehicle_info">车辆信息</string>
    <string name="car_num">车牌号</string>
    <string name="car_province">车牌省份</string>
    <string name="car_nums">车牌号码</string>
    <string name="query">查询</string>
    <string name="mileage">行驶里程</string>
    <string name="enter_mileage">输入已行驶里程数</string>
    <string name="kilometre">公里</string>
    <string name="vehicle_vincode">车架号</string>
    <string name="car_category">车型分类</string>
    <string name="subordinate_company">所属公司</string>
    <string name="warranty_expires">保修到期</string>
    <string name="fault_location">故障位置</string>
    <string name="add_fault_location">添加故障位置</string>
    <string name="responsibility_classification">责任分类</string>
    <string name="fault_description">故障现象描述</string>
    <string name="descrip_fault">请用文字描述故障现象。</string>
    <string name="fault_analysis">原因分析</string>
    <string name="descrip_cause">请用文字描述故障原因。</string>
    <string name="fault_status">故障处理状态?</string>
    <string name="have_done">已解决</string>
    <string name="not_have_done">未解决</string>
    <string name="mainten_ischange">是否更换配件?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="add_parts">添加配件</string>
    <string name="mainten_treatment">处理措施</string>
    <string name="descrip_measures">请用文字描述故障措施。</string>
    <string name="customer_info">客户信息</string>
    <string name="fault_mess">故障信息</string>
    <string name="repaire_info">维修信息</string>
    <string name="video">视频</string>
    <string name="album">照片</string>
    <string name="camera_permission_denied">相机权限被禁止,无法录制视频</string>
    <string name="sdcar_permission_denied">SDCard权限被禁止,无法选择图片</string>
</resources>
