<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            style="@style/gray_medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:gravity="center_vertical"
            android:text="@string/fault_status" />

        <LinearLayout
            android:id="@+id/id_fault_status_yes"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_gray" />

            <RelativeLayout
                android:id="@+id/fault_yes_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bt_nobgd"
                android:paddingLeft="25dp"
                android:paddingRight="25dp" >

                <TextView
                    style="@style/black_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/have_done" />

                <ImageView
                    android:id="@+id/fault_yes_img"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/failuredidnotchooseassemblies_2x" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="25dp"
                android:background="@color/text_color_gray" />

            <RelativeLayout
                android:id="@+id/fault_no_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bt_nobgd"
                android:paddingLeft="25dp"
                android:paddingRight="25dp" >

                <TextView
                    style="@style/black_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/not_have_done" />

                <ImageView
                    android:id="@+id/fault_no_img"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/failuredidnotchooseassemblies_2x" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_gray" />
        </LinearLayout>

        <TextView
            style="@style/gray_medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:gravity="center_vertical"
            android:text="@string/mainten_ischange" />

        <LinearLayout
            android:id="@+id/id_mainten_yes"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/text_color_gray" />

            <RelativeLayout
                android:id="@+id/yes_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bt_nobgd"
                android:paddingLeft="25dp"
                android:paddingRight="25dp" >

                <TextView
                    style="@style/black_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/yes" />

                <ImageView
                    android:id="@+id/yes_img"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/failuredidnotchooseassemblies_2x" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="25dp"
                android:background="@color/text_color_gray" />

            <RelativeLayout
                android:id="@+id/no_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bt_nobgd"
                android:paddingLeft="25dp"
                android:paddingRight="25dp" >

                <TextView
                    style="@style/black_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/no" />

                <ImageView
                    android:id="@+id/no_img"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/failuredidnotchooseassemblies_2x" />
            </RelativeLayout>

            <View
                android:id="@+id/no_chose_view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="25dp"
                android:background="@color/text_color_gray"
                android:visibility="gone" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/maintenance_click_container"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="0.5dp"
            android:background="@drawable/bt_nobgd"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ddfaultlocation_2x" />

                <TextView
                    style="@style/green_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/add_parts" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_color_gray" />

        <LinearLayout
            android:id="@+id/maintenance_infor_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >
        </LinearLayout>

        <TextView
            style="@style/gray_medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:gravity="center_vertical"
            android:text="@string/mainten_treatment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:minHeight="80dp"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingTop="9dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/decrip_location_et"
                    style="@style/black_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_color_wight"
                    android:enabled="true"
                    android:gravity="center_vertical"
                    android:hint="@string/descrip_measures"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:minHeight="50dp"
                    android:paddingLeft="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="25dp"
                    android:background="@color/text_color_gray" />
            </LinearLayout>

            <GridView
                android:id="@+id/repare_info_img_upload_gv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:horizontalSpacing="2dp"
                android:listSelector="@color/transparent"
                android:minHeight="200dp"
                android:numColumns="4"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp" >
            </GridView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>